add player controller

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 	</ul>
 	<div id="chord"></div>
 	<div id="widget"></div>
+	<ul id="widget_ctrl">
+	  <li class="play">再生</li>
+	  <li class="pause">停止</li>
+	  <li class="head">先頭</li>	  	  	  
+	  <li class="seekto_chorus">サビ</li>
+	</ul>
+	<div class="memo">
+	  動画の操作はボタン(API経由)で行ってください
+	</div>
 	<div id="chorus_alert">サビ</div>
   </body>
 
